Fix bug: fel engine array context not support paral. use map context