@@ -10,11 +10,6 @@ import java.util.Map;
 import com.carrotsearch.sizeof.RamUsageEstimator;
 
 /**
- * Needs vm args on compile (javac):<br>
- * <blockquote>{@code --add-exports jdk.scripting.nashorn/jdk.nashorn.internal.ir.debug=ALL-UNNAMED}</blockquote> Needs vm args on runtime
- * (java):<br>
- * <blockquote>{@code --add-opens java.base/java.util=jdk.scripting.nashorn --add-opens java.base/java.lang=jdk.scripting.nashorn}</blockquote>
- * 
  * @author zx
  */
 public interface SizeOfSupport {
@@ -41,7 +36,6 @@ public interface SizeOfSupport {
 	}
 
 	public static long sizeOf(Object obj) {
-
 		if (_Internal.SIZE_OF_INACCESSIBLE_FAILED) return 0;
 		try {
 			return RamUsageEstimator.sizeOf(obj);
